fix h-1 carousel
pengganti horizontal scroll

--- a/src/output.css
+++ b/src/output.css
@@ -680,6 +680,14 @@ video {
   top: 58px;
 }
 
+.left-6 {
+  left: 1.5rem;
+}
+
+.right-6 {
+  right: 1.5rem;
+}
+
 .z-0 {
   z-index: 0;
 }
@@ -726,6 +734,10 @@ video {
 
 .z-\[9999\] {
   z-index: 9999;
+}
+
+.z-\[1000\] {
+  z-index: 1000;
 }
 
 .mx-auto {
@@ -883,6 +895,10 @@ video {
 
 .mt-\[80px\] {
   margin-top: 80px;
+}
+
+.-mt-\[150px\] {
+  margin-top: -150px;
 }
 
 .block {
@@ -1044,6 +1060,22 @@ video {
 .h-min {
   height: -moz-min-content;
   height: min-content;
+}
+
+.h-\[360px\] {
+  height: 360px;
+}
+
+.h-\[1000px\] {
+  height: 1000px;
+}
+
+.h-\[100px\] {
+  height: 100px;
+}
+
+.h-\[500px\] {
+  height: 500px;
 }
 
 .max-h-0 {
@@ -1947,6 +1979,10 @@ video {
   padding-bottom: 0.75rem;
 }
 
+.pb-\[100px\] {
+  padding-bottom: 100px;
+}
+
 .text-left {
   text-align: left;
 }
@@ -2179,6 +2215,11 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
+.text-gray-800 {
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity, 1));
+}
+
 .opacity-0 {
   opacity: 0;
 }
@@ -2198,6 +2239,12 @@ video {
 .shadow-2xl {
   --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
   --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
